--- a/shopping-cart/views/layout.ejs
+++ b/shopping-cart/views/layout.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" href="/css/shopping-cart.css">
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script src="/js/util/browser.js"></script>
 <script src="/js/shopping-cart.js"></script>
